--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,4 +2,34 @@
 @import 'fonts';
 @import 'bootstrap';
 
-@import 'header';
+body {
+	color: #fff;
+	background-color: #000;
+}
+
+section {
+	#map { 
+		height: 100vh;
+		width: 100%;
+	}
+
+	#face {
+		position: absolute;
+    bottom: 50px;
+    z-index: 9999;
+    width: 35%;
+    left: 50%;
+    transform: translateX(-50%);
+	}
+}
+
+footer {
+	background-color: blue;
+	position: absolute;
+	bottom: 0;
+	z-index: 9999;
+	width: 100%;
+	padding: 10px 20px;
+}
+
+
